--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center container my-5">
-                <button class="btn btn-danger" type="button" id="btnCalcula">
+
+                <button class="btn btn-primary" type="button" id="btnCalcula">
                     Calcular
                 </button>
+
                 <button class="btn btn-dark ms-1" type="button" id="btnImprimir">
                     Imprimir
                 </button>
+
             </div>
         </form>
     </div>
